--- a/web/winter_project/templates/miRNA_screener.html
+++ b/web/winter_project/templates/miRNA_screener.html
@@ -44,4 +44,15 @@
     </div><br><br>
 </div>
 
+<!-- search bar -->
+<div class='FormOption'>
+    <div class="form-group">
+        <div class="col-sm-3">
+        </div>
+        <div class="col-sm-7">
+            <button type ='button' value = 'search' id = "search_btn" class="btn btn-primary">Search</button>
+        </div>
+    </div>
+</div><br>
+
 {% endblock %}
